fix spacing

--- a/style.css
+++ b/style.css
@@ -6,14 +6,15 @@
     --color: rgba(251, 40, 40, 0.5);
 }
 html, body{
-   height: 100%;
-   background-image: url(/background.jpeg);
+   background: url(/background.jpeg) no-repeat center fixed;
+   background-size: cover;
    color: white;
 }
 body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 150px;
 }
 .left{
     margin-bottom: 0;
@@ -23,7 +24,7 @@ body{
     font-family: 'stray', serif;
     font-size: 80px;
     margin-top: 100px;
-    margin-right: 400px;
+    margin-right: 500px;
 }
 h2{
     font-family: 'stray', serif;
